--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="C:/Users/A.Jr/Downloads/Javap4/itext-5.5.3/itext-xtra-5.5.3-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/A.Jr/Downloads/Javap4/mysql-connector-java-5.1.37/mysql-connector-java-5.1.37/mysql-connector-java-5.1.37-bin.jar"/>
 	<classpathentry kind="lib" path="C:/Users/A.Jr/Downloads/Javap4/sqljdbc_4.1.5605.100_ptb/sqljdbc_4.1/ptb/sqljdbc41.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
